# rye-lambda-cdk

./: .gitignore  README.md  app.py  cdk.json  pyproject.toml
app/common-utils/: README.md  pyproject.toml
app/common-utils/src/common_utils/: __init__.py
app/lambda-app/: README.md  pyproject.toml
app/lambda-app/src/lambda_app/: __init__.py
docker/: lambda.Dockerfile
rye_lambda_cdk/: rye_lambda_cdk_stack.py
src/rye_lambda_cdk/: __init__.py  __main__.py  stack.py
tests/unit/: test_rye_lambda_cdk_stack.py
